src/test/deca/context/valid/ContextAvecObjet/ManipulationClasse/InClass/overridedMethodCalledinMethodArg.deca
// Description:
//  Appel de deux méthodes avec argument dont l'une est overrided dans une méthode
//
// Resultats:
//    ok

class A {
    int x = -1;

    int getX(int y){
        return x+y;
    }

}

class B extends A {
    int getX(int z){
        return -x-z;
    }
}

class C{
    void setX(B b, A a, int r){
        int x = a.getX(r);
        int y = b.getX(r);
    }
}



